<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_row"
    android:orientation="horizontal"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_height="55dp"
        android:layout_width="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        tools:src="@android:color/darker_gray"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/img_item_photo"
        android:layout_toRightOf="@id/img_item_photo"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <!--    NAME    -->
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/keyboard_name" />

        <!--    PRICE    -->
        <TextView
            android:id="@+id/tv_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:text="@string/keyboard_price"/>

        <!--    DETAIL    -->
        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            tools:text="@string/keyboard_detail"/>
    </LinearLayout>

</RelativeLayout>